--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ code {
 div{
   width: 100%;
   height: 100vh;
-  background: violet;
+  background: rgb(100, 17, 100);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -51,7 +51,7 @@ input{
 button{
   line-height: 24px;
   padding: 0 20px;
-  background: violet;
+  background: #813981;
   color: whitesmoke;
   border: 2px solid #ecf0f1;
   outline: none;
@@ -63,4 +63,10 @@ button{
 button:hover{
   background: rgb(207, 171, 171);
   box-shadow: 0 2px 2px black;
+}
+
+
+h3{
+  color: black;
+  background: transparent;  
 }
